# 2017_Project_with_DockerMake

./: .gitignore  .gitmodules  DockerMake.yml  README.md  TODO.md  build_images_docker.sh  clean_project.sh  create_volumes.sh  docker-make.sh  docker_create_network.sh  docker_launch_daemon.sh  launch_pycharm.sh  launch_qtcreator.sh  launch_shell_on_li3ds_ros.sh  launch_sublimetext3.sh  set_settings.sh
docker-compose/: docker-compose-dev.yml  docker-compose.yml  docker-compose_docker-oriented.yml
project/base/: Dockerfile
project/deploy/: Dockerfile  entry-point.sh
project/dev/: Dockerfile
project/dev/pycharm/: Dockerfile  entry-point.sh  run.sh
project/dev/qtcreator/: Dockerfile  run.sh
project/pipeline/: README.md  bash_tools.sh  build_image.sh  clean_mountpoints.sh  clean_project.sh  cookie  create_image.sh  create_volumes.sh  debug_bash.sh  deploy_project.sh  docker-compose.yml  docker-entrypoint.sh  env_for_project.sh  find_free_tcp_port.sh  generate_sha256.sh  launch_dockercompose_tmux.sh  manage_image.sh  pipeline.sh  run_bash_on_image.sh  run_deploy_on_image.sh  update_image.sh  validate_project.sh
project/pipeline/deploy/: .gitignore  Dockerfile.template  LI3DS.perspective  build_and_push.sh  convert_bag_to_pcd.sh  prototype.launch  run.sh
project/pipeline/project1/: .gitignore  .rosinstall  .zshrc  README.md  arduino_build_gtests.sh  arduino_build_gtests_sub.sh  arduino_build_tests.sh  arduino_launch_gtest_sub.sh  arduino_launch_node.sh  arduino_launch_talker.py  arduino_launch_tests.sh  arduino_upload.sh  get_and_install_bagedit.sh  prototype.launch  tmuxp_load_LI3DS.sh
project/pipeline/project1/cmake_test_external_project/: CMakeLists-ExternalProjects.txt  CMakeLists.txt
project/pipeline/project1/cmake_test_external_project/src/: app.cpp
project/pipeline/scripts/: build.sh  configure_catkin_ws.sh  configure_overlay_ws.sh  create_image.sh  generate_sha256.sh  launch_qtcreator.sh  synchronize_overlay_ws.sh  (+1 more)
project/prototype/: Dockerfile  docker-entrypoint.sh  prototype.launch
project/ros/: Dockerfile
project/tools/: Dockerfile
(+168 files in other folders)
